2015-01-20  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vmlXl.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmlal.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmlsl.c: New file.

2015-01-20  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vshuffle.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vtrn.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vuzp.c: Use code from
	vshuffle.inc.
	* gcc.target/aarch64/advsimd-intrinsics/vzip.c: Use code from
	vshuffle.inc.

2015-01-20  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vmlX_lane.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmla_lane.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmls_lane.c: New file.

2015-01-20  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vmlX.inc: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmla.c: New file.
	* gcc.target/aarch64/advsimd-intrinsics/vmls.c: New file.

2015-01-20  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vldX_dup.c: New file.

2015-01-20  Jakub Jelinek  <jakub@redhat.com>

	* gcc.dg/guality/pr49888.c (v): Add __attribute__((used)).

	PR sanitizer/64632
	* g++.dg/ubsan/pr64632.C: New test.

	PR debug/64663
	* gcc.dg/pr64663.c: New test.

2015-01-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/64383
	* g++.dg/warn/Wunused-var-23.C: New.

2015-01-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/59937
	* g++.dg/cpp0x/constexpr-59937-1.C: New.
	* g++.dg/cpp0x/constexpr-59937-2.C: Likewise.

2015-01-20  Richard Biener  <rguenther@suse.de>

	PR ipa/64684
	* gcc.dg/lto/pr64684_0.c: New testcase.
	* gcc.dg/lto/pr64684_1.c: Likewise.
	* gcc.dg/lto/pr64684_2.c: Likewise.
	* gcc.dg/lto/pr64685_0.c: Likewise.
	* gcc.dg/lto/pr64685_1.c: Likewise.

2015-01-20  Paolo Carlini  <paolo.carlini@oracle.com>
